File Name: CHANGES

02/12/2021 FASP 2.6.3:
- Remove BLAS from CMake;
- Make CMake work on Windows + VSCode + CMake.

02/10/2021 FASP 2.6.2:
- Update output information for UA AMG setup;
- Add decoup_type for choosing decoupling methods in BSR;
- Update test problems in main/test.c;
- Update CMake external packages.

02/05/2021 FASP 2.6.1:
- Add uninstall target to the new CMakeFile.txt;
- Now both old and new cmake work!
- Change output of fasp_solver_amg();
- Update header file;
- Update return values for AMG solvers;
- Add Release/Debug targets into cmake.

01/25/2021 FASP 2.6.0:
- Switch cmake style.
- Use the same compile and link style as fasp4blkoil.
- Check compatibility with PennSim new version!
- Update benchmark test input format.
- Double-check PARDISO interface.

01/15/2021 FASP 2.5.9:
- Fix divide-by-zero in GCG for NAMLI.
- Fix some typos in comments.

01/10/2021 FASP 2.5.8:
- Add benchmark test based on SuiteSparse Matrix Market.
- Modify test/main/test.c slightly.
- Update error messages for reading files.
- Rewrite fasp_dbsr_print.
- Make a separate dir for benchmark test.
- Fix problems with icc compiler for Linux.

12/15/2020 FASP 2.5.7:
- Check trivial solution case Ax=0 for AMG cycles.
- Update cmake required version.
- Update cmake CC search list.
- Do not check for Doxygen by default.
- Add VW and WV hybrid cycles.

11/04/2020 FASP 2.5.6:
- Fix new warnings in GCC10.
- Fix unsigned long problem for INT.
- Fix debug mode.
- Update version information.

10/13/2020 FASP 2.5.5:
- Important fixes to UA AMG: handle possible divide by zero error.
- Update INT definition and test INT=int and long.
- Caution: INT cannot be short or unsigned int.
- Update other FASP repositories accordingly. 

10/03/2020 FASP 2.5.4:
- Update Windows version to VS2019 and Intel2020.1.

07/18/2020 FASP 2.5.3:
- Modify test problems.
- Skip comments in the beginning of data files.
- When reading CSR matrix starting from 1, shift by -1.
- Ignore ex and mk files from git.