@@ -11,7 +11,7 @@ file(GLOB FASP_BASE_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
 	  		    	     ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
 	  		     	     ${FASP_EXTRA_SRC_DIR}/include/*.h)
 #
-file(GLOB FASP_BASE_INL     RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} 
+file(GLOB FASP_BASE_INL RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} 
 	  		    	     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.inl)
 #
 file(GLOB FASP_BASE_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} 
